compensation tickets y idea informe

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -36,8 +36,8 @@ Integrantes:
 
 \begin{itemize}
 	\item Castro, Dami\'an L.U.: 326/11  \verb+ltdicai@gmail.com+
-	\item Toffo :P, Luis L.U.: NOSE \verb+toffo_hot@gmail.com+
-	\item Zanollo, Florencia L.U.: NOSE \verb+zanollo_hot@gmail.com+
+	\item Toffoletti, Luis L.U.: 827/11 \verb+luis.toffoletti@gmail.com+
+	\item Zanollo, Florencia L.U.: 934/11 \verb+florenciazanollo@gmail.com+
 \end{itemize}
 
 \newpage
@@ -48,6 +48,7 @@ Integrantes:
 
 \section{Introducción}
 
+\input{ej4/ej4.tex}
 \section{Discusi\'on}
 
 \section{Conclusiones}
