--- a/informe/ej3y4/ej3y4.tex
+++ b/informe/ej3y4/ej3y4.tex
@@ -16,17 +16,17 @@ En estas im todos los cpu tienen quantum = 4
 -Hacer otros experimentos con dif quantums y ver cuál queda mejor
 
 \begin{center}
- \includegraphics[scale=0.5]{./ej4/ej4_1cpu.png}
+ \includegraphics[scale=0.5]{./ej3y4/ej4_1cpu.png}
  % ej4_1cpu.png: 1027x247 pixel, 72dpi, 36.23x8.71 cm, bb=0 0 1027 247
 \end{center}
 
 \begin{center}
- \includegraphics[scale=0.5]{./ej4/ej4_2cpu.png}
+ \includegraphics[scale=0.5]{./ej3y4/ej4_2cpu.png}
  % ej4_2cpu.png: 1027x247 pixel, 72dpi, 36.23x8.71 cm, bb=0 0 1027 247
 \end{center}
 
 \begin{center}
- \includegraphics[scale=0.5]{./ej4/ej4_3cpu.png}
+ \includegraphics[scale=0.5]{./ej3y4/ej4_3cpu.png}
  % ej4_3cpu.png: 1027x247 pixel, 72dpi, 36.23x8.71 cm, bb=0 0 1027 247
 \end{center}
 
