--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -18,7 +18,10 @@
 \usepackage{sidecap}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{wrapfig}
 
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 % \newcommand{\real}{\hbox{\bf R}}
 
 \title{Trabajo Práctico de Sistemas Operativos}
@@ -48,7 +51,10 @@ Integrantes:
 
 \section{Introducción}
 
-\input{ej4/ej4.tex}
+\input{ej1y2/ej1y2.tex}
+
+\input{ej3y4/ej3y4.tex}
+
 \section{Discusi\'on}
 
 \section{Conclusiones}
