--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -18,8 +18,12 @@
 \usepackage{sidecap}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{algpseudocode}
 
 % \newcommand{\real}{\hbox{\bf R}}
+
+\newcommand{\funcName}[1]{\textbf{\texttt{#1}}}
+
 
 \title{Trabajo Práctico de Sistemas Operativos}
 
@@ -48,7 +52,16 @@ Integrantes:
 
 \section{Introducción}
 
-\input{ej4/ej4.tex}
+\input{introduccion.tex}
+
+\section{Pol\'iticas de \emph{scheduling}}
+
+%\input{fcfs.tex}
+
+%\input{rr.tex}
+
+%\input{lottery.tex}
+
 \section{Discusi\'on}
 
 \section{Conclusiones}
