--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -57,11 +57,13 @@ Integrantes:
 
 \input{introduccion.tex}
 
+\section{Tareas}
+
 \section{Pol\'iticas de \emph{scheduling}}
 
-\input{ej1y2/ej1y2.tex}
+\input{FCFS/FCFS.tex}
 
-\input{ej3y4/ej3y4.tex}
+\input{RR/RR.tex}
 
 \section{Discusi\'on}
 
