pequeño arreglo en pseudocode de taskConsola

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -54,15 +54,13 @@ Integrantes:
 \newpage
 
 \section{Introducción}
-
 \input{introduccion.tex}
 
 \section{Tareas}
+\input{tasks/taskConsola.tex}
 
 \section{Pol\'iticas de \emph{scheduling}}
-
 \input{FCFS/FCFS.tex}
-
 \input{RR/RR.tex}
 
 \section{Discusi\'on}
