--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -57,7 +57,20 @@ Integrantes:
 \input{introduccion.tex}
 
 \section{Tareas}
+
+\input{tasks/taskCPU.tex}
+
+\input{tasks/taskIO.tex}
+
+\newpage
+
+\input{tasks/taskAlterno.tex}
+
 \input{tasks/taskConsola.tex}
+
+\newpage
+
+\input{tasks/taskBatch.tex}
 
 \section{Pol\'iticas de \emph{scheduling}}
 \input{FCFS/FCFS.tex}
