final commit before mandar todo a entrega... te asustaste, eh

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -75,10 +75,14 @@ Integrantes:
 \section{Pol\'iticas de \emph{scheduling}}
 \input{FCFS/FCFS.tex}
 \input{RR/RR.tex}
+\input{Lottery/lottery.tex}
 
 \section{Discusi\'on}
 
 \section{Conclusiones}
+
+\bibliographystyle{plain}
+\bibliography{biblio}
 
 
 \end{document}
