--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -27,6 +27,8 @@
 
 \newcommand{\funcName}[1]{\textbf{\texttt{#1}}}
 
+%\author{Grupo de SO}
+
 
 \title{Trabajo Práctico de Sistemas Operativos}
 
@@ -72,14 +74,22 @@ Integrantes:
 
 \input{tasks/taskBatch.tex}
 
+\newpage
+
 \section{Pol\'iticas de \emph{scheduling}}
 \input{FCFS/FCFS.tex}
+
+\newpage 
+
 \input{RR/RR.tex}
+
+\newpage
+
 \input{Lottery/lottery.tex}
 
-\section{Discusi\'on}
+%\section{Discusi\'on}
 
-\section{Conclusiones}
+%\section{Conclusiones}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
