--- a/informe/Lottery/lottery.tex
+++ b/informe/Lottery/lottery.tex
@@ -1,6 +1,6 @@
 \subsection{Lottery Scheduling}
 
-La idea detr\'as de $lottery scheduling$\cite{SchedLottery} es aplicar un enfoque probabil\'istico y pseudoaleatorio a la hora de asignar recursos a las tareas. Para lograr esto se utiliza un sistema de $tickets$ que representan derechos de acceso a recursos; las tareas poseen una cantidad determinada de $tickets$, puediendo ser distinta de una tarea a otra y cada vez que el $scheduler$ decide a qu\'e tarea otorgar los recursos lo hace mediante una loter\'ia, elige uno entre todos los $tickets$ del sistema. El proceso que tenga ese $ticket$ ser\'a el ganador y se le asignar\'a el recurso que est\'a demandado.
+La idea detr\'as de $lottery$ $scheduling$\cite{SchedLottery} es aplicar un enfoque probabil\'istico y pseudoaleatorio a la hora de asignar recursos a las tareas. Para lograr esto se utiliza un sistema de $tickets$ que representan derechos de acceso a recursos; las tareas poseen una cantidad determinada de $tickets$, puediendo ser distinta de una tarea a otra y cada vez que el $scheduler$ decide a qu\'e tarea otorgar los recursos lo hace mediante una loter\'ia, elige uno entre todos los $tickets$ del sistema. El proceso que tenga ese $ticket$ ser\'a el ganador y se le asignar\'a el recurso que est\'a demandado.
 
 Los $tickets$ son una forma de cuantificar los derechos de acceso a recursos; cuantos m\'as $tickets$ tenga una tarea, m\'as probable es que gane la loter\'ia. Tambi\'en permiten homogeneizar los diferentes tipos de recursos ya que todos son representados por los mismos tipos de $tickets$, esto aporta flexibilidad a la hora de asignarlos.
 
@@ -27,4 +27,4 @@ Se puede probar que la cantidad de loter\'ias ganadas por la tarea $j$ sigue una
 	E(\text{cantidad de loter\'ias ganadas}) = \frac{t}{n}*\text{cantidad de loter\'ias realizadas}
 \]
 
-Esto implica que el valor promedio de la cantidad de loter\'ias ganadas es directamente proporcional a la cantidad de $tickets$ que posee la tarea. Por esta raz\'on se dice que $lottery scheduling$ es probabil\'isticamente justo.
+Esto implica que el valor promedio de la cantidad de loter\'ias ganadas es directamente proporcional a la cantidad de $tickets$ que posee la tarea. Por esta raz\'on se dice que $lottery$ $scheduling$ es probabil\'isticamente justo.
