--- a/informe/RR/RR.tex
+++ b/informe/RR/RR.tex
@@ -80,7 +80,7 @@ proceso 1 (siguiente en la cola de ReadyTasks).\\
 En cuanto el proceso 1 termina su quantum es desalojado (y movido al final de la cola de ReadyTasks).
 Y se deja correr el proceso 2.\\
 
-Entre los ciclos 14 y 15, la cola de ReadyTasks tiene la siguiente forma:\\
+Entre los ciclos 14 y 15, la cola de ReadyTasks tiene la siguiente forma:
 [3, 2, 0, 1].\\
 Ya que el proceso 0 fue desencolado en cuanto se bloqueó, y vuelto a encolar en el
 ciclo 11 (cuando se desbloquea), antes de que termine el quantum del proceso 1.\\
