--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -40,6 +40,7 @@
 	Universidad de Buenos Aires - Departamento de Computaci\'on - FCEN
 \end{center}
 
+
 \vspace{2cm}
 Integrantes:
 
@@ -82,6 +83,10 @@ Integrantes:
 \newpage 
 
 \input{RR/RR.tex}
+
+\newpage
+
+\input{RR2/RR2.tex}
 
 \newpage
 
