Cosas de informe y codigo para estadisticas

--- a/informe/biblio.bib
+++ b/informe/biblio.bib
@@ -1,11 +1,16 @@
 @article{SchedLottery,
 author = {Waldspurger, Carl A. and Weihl, William E.},
 keywords = {scheduling,fair,probabilistic,lottery,tickets, Resource Management},
-title = {Lottery Scheduling: Flexible Proportional-Share Resource Management}
+title = {Lottery Scheduling: Flexible Proportional-Share Resource Management},
+journal = {The 1994 Operating Systems Design and Implementation conference (OSDI '94)},
+year = {1994},
+note = {\url{https://www.usenix.org/legacy/publications/library/proceedings/osdi/full_papers/waldspurger.pdf}}
 }
-@article{Tanen,
+@book{Tanen,
 author = {Tanenbaum, Andrew S.},
 keywords = {operating systems,scheduling},
+edition = {4th},
+publisher = {Pearson},
 title = {Modern Operating Systems},
-year = {2008}
+year = {2013}
 }
