--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -87,7 +87,9 @@ Integrantes:
 
 \input{Lottery/lottery.tex}
 
-%\section{Discusi\'on}
+\section{Discusi\'on}
+
+\input{discusion.tex}
 
 %\section{Conclusiones}
 
