acomode un par de cosas visuales

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -10,6 +10,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 
+\setcounter{secnumdepth}{4} %make paragraph behave as subsubsubsection
+
 \usepackage[section]{placeins}
 \usepackage{float}
 %\usepackage{adjustbox}
@@ -91,6 +93,8 @@ Integrantes:
 \newpage
 
 \input{Lottery/lottery.tex}
+
+\newpage
 
 \section{Discusi\'on}
 
