mas arreglos visuales + comienzo ej 10

--- a/informe/Lottery/lottery.tex
+++ b/informe/Lottery/lottery.tex
@@ -28,3 +28,7 @@ Se puede probar que la cantidad de loter\'ias ganadas por la tarea $j$ sigue una
 \]
 
 Esto implica que el valor promedio de la cantidad de loter\'ias ganadas es directamente proporcional a la cantidad de $tickets$ que posee la tarea. Por esta raz\'on se dice que $lottery$ $scheduling$ es probabil\'isticamente justo.
+
+\subsubsection{Fairness}
+
+\subsubsection{Compensation tickets}
